--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,23 @@
-.container-1, .container-2 {
-    display: flex;
-    align-items: flex-end;
-    flex-direction: row;
+* {
+    padding: 0;
+    margin: 0;
 }
+@media (min-width: 500px) {
+    .container-1, .container-2 {
+        display: flex;
+        align-items: flex-end;
+        flex-direction: row;
+    }
+    .container-2 {
+        justify-content: flex-end;
+    }
+    .box {
+        width: 20%; /* flex-basis: ; то же самое */
+    }
+}
+
+
+
 .box-1 {
     flex: 2;
     order: 2;
@@ -18,12 +33,4 @@
 .container-1 div, .container-2 div {
     padding: 10px;
     border: 1px solid silver;
-}
-
-.container-2 {
-    justify-content: flex-end;
-}
-
-.box {
-    width: 20%; /* flex-basis: ; то же самое */
 }
