--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,21 @@
     margin: 0;
 }
 @media (min-width: 500px) {
-    .container-1, .container-2 {
+    .container-1 {
         display: flex;
         align-items: flex-end;
         flex-direction: row;
     }
-    .container-2 {
-        justify-content: flex-end;
-    }
-    .box {
-        width: 20%; /* flex-basis: ; то же самое */
-    }
+
 }
 
+.container-2 {
+    display: flex;
+    /* justify-content: space-between; */
+    justify-content: space-around;
+    flex-wrap: wrap;/* не получалось пока не добавил flex-basis*/
 
-
+}
 .box-1 {
     flex: 2;
     order: 2;
@@ -33,4 +33,7 @@
 .container-1 div, .container-2 div {
     padding: 10px;
     border: 1px solid silver;
+}
+.box {
+    flex-basis: 30%;
 }
